--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
         "watch": "mix watch",
         "watch-poll": "mix watch -- --watch-options-poll=1000",
         "hot": "mix watch --hot",
-        "prod": "npm run production",
-        "production": "mix --production"
+        "prod": "npm run development",
+        "production": "mix --dev"
     },
     "devDependencies": {
         "axios": "^0.21",
