--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
         "watch": "mix watch",
         "watch-poll": "mix watch -- --watch-options-poll=1000",
         "hot": "mix watch --hot",
-  "prod": "npm run production",
-    "production": "mix --production"
+        "prod": "npm run production",
+        "production": "mix --production"
     },
     "devDependencies": {
         "axios": "^0.21",
@@ -21,5 +21,8 @@
         "resolve-url-loader": "^4.0.0",
         "sass": "^1.32.11",
         "sass-loader": "^11.0.1"
+    },
+    "dependencies": {
+        "react": "^19.0.0"
     }
 }
