--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "watch-poll": "mix watch -- --watch-options-poll=1000",
         "hot": "mix watch --hot",
         "prod": "npm run build",
-        "production": "mix --production"
+        "production": "mix run"
     },
     "devDependencies": {
         "axios": "^0.21",
