--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
         "watch": "mix watch",
         "watch-poll": "mix watch -- --watch-options-poll=1000",
         "hot": "mix watch --hot",
-        "prod": "npm run build",
+        "prod": "npm run production",
         "production": "mix run"
     },
     "devDependencies": {
