--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
         "watch": "mix watch",
         "watch-poll": "mix watch -- --watch-options-poll=1000",
         "hot": "mix watch --hot",
-        "production": "npm run production"
-    },
+        "prod": "mix --production",  // Run the production build
+        "production": "mix --production"  // This is the correct script to trigger production build
+    }
     "devDependencies": {
         "axios": "^0.21",
         "bootstrap": "^4.6.0",
