--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
         "watch": "mix watch",
         "watch-poll": "mix watch -- --watch-options-poll=1000",
         "hot": "mix watch --hot",
-        "prod": "mix --production",  // Run the production build
-        "production": "mix --production"  // This is the correct script to trigger production build
-    }
+        "prod": "mix --production",  
+        "production": "mix --production"
+    },
     "devDependencies": {
         "axios": "^0.21",
         "bootstrap": "^4.6.0",
